refactor(SearchConfig) replace Collections.unmodifiableMap by Map.copyOf
Replace call of Collections.unmodifiableMap by Map.copyOf to archive real immutable and simplify call.